	reference_map; sort reference_map_referenced_map index.
	* src/GrampsDb/_ReadGedcom.py (parse_record): Restore add def_src.
	* src/GrampsDb/_GrampsBSDDB.py (rebuild_secondary): Proper
	rebuild; convert surnames secondary index to DUPSORTed BTREE.
	* src/GrampsDb/_GrampsBSDDB.py: upgrade from gramps20.
	* src/GrampsDb/_ReadXML.py (parse): Properly set batch transaction.

2006-01-17  Don Allingham  <don@gramps-project.org>
	* src/DbPrompter.py: removed
	* src/gramps.glade: delete unused stuff
	* src/ViewManger.py: progressbar callbacks
	* src/GrampsDb/_GrampsBSDDB.py: progressbar callbacks
	* src/GrampsDb/_GrampsGEDDB.py: progressbar callbacks
	* src/GrampsDb/_ReadXML.py: progressbar callbacks
	* src/GrampsDb/_ReadGedcom.py: progressbar callbacks

2006-01-17 Richard Taylor <rjt-gramps@thegrindstone.me.uk>
        * src/GrampsDb/_GrampsBSDDB.py: make ref update optional
	
2006-01-17  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsDbBase.py (redo): Properly abort redo action
	when no redo is available.

	* src/GrampsDb/_GrampsDbBase.py: Set batch transaction property in
	the constructor.
	* src/GrampsDb/_GrampsBSDDB.py: Back to durable transactions, set
	TXN_NOSYNC flag only on batch transactions.
	* src/GrampsDb/_ReadGedcom.py (parse_record): Do not add def_src
	to person/family. Need to optimize the performance first.

2006-01-17  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/EventView.py (ui_definition): Add filter menu entry
	* src/FamilyList.py (ui_definition): Add filter menu entry
	* src/PlaceView.py (ui_definition): Add filter menu entry
	* src/RepositoryView.py (ui_definition): Add filter menu entry
	* src/SourceView.py (ui_definition): Add filter menu entry
	* src/GenericFilter.py: Adding generic filter widget to be used in all
	list views; Custom filter rules now get prefixed by primary object type
	* src/PageView.py: Add filter control to all list views
	* src/PersonView.py: Filter handling moved to GenericFiler
